HTML Forecast visibility hidden

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <hr />
 
       <!-- WEATHER NEXT 5 DAYS -->
-      <div class="row next-five">
+      <!-- <div class="row next-five">
         <div class="col day-1">
           Tue
           <div class="icon-next">
@@ -132,7 +132,7 @@
           </div>
           <span class="temp-next">
             2°/8°
-          </span>
+          </span> -->
         </div>
       </div>
     </div>
