Units conversion updated to be buttons. Github repository link added.

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         </h3>
       </div>
       <div class="units">
-        <a href="#" id="celsius">
-          °C |
-        </a>
-        <a href="#" id="farenheit">
+        <button id="celsius">
+          °C 
+        </button> |
+        <button id="farenheit">
           °F
-        </a>
+        </button>
       </div>
       <hr />
 
@@ -138,20 +138,18 @@
     </div>
     <footer>
       <p>
-        Coded by
-        <a href="https://www.shecodes.io/students/228-victoria-moreno"
-          >Victoria Moreno
+        <a href="https://github.com/vicflake/Weather-App-" target="_blank">Open-sourced </a>by Victoria Moreno
         </a>
         <br />
         <span
           >Photo by
           <a
-            href="https://unsplash.com/@maritafox?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
+            href="https://unsplash.com/@maritafox?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="_blank"
             >Marita Kavelashvili</a
           >
           on
           <a
-            href="https://unsplash.com/s/photos/tree?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
+            href="https://unsplash.com/s/photos/tree?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="_blank"
             >Unsplash</a
           ></span
         >
