--- a/index.html
+++ b/index.html
@@ -82,35 +82,35 @@
       <div class="row forecast">
         <div class="col-sm">
           Tue
-          <img src="http://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
+          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
           <div class="forecast-temperature">
            <strong>2°</strong> 8°
           </div>
         </div>
         <div class="col-sm">
           Tue
-          <img src="http://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
+          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
           <div class="forecast-temperature">
            <strong>2°</strong> 8°
           </div>
         </div>
         <div class="col-sm">
           Tue
-          <img src="http://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
+          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
           <div class="forecast-temperature">
            <strong>2°</strong> 8°
           </div>
         </div>
         <div class="col-sm">
           Tue
-          <img src="http://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
+          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
           <div class="forecast-temperature">
            <strong>2°</strong> 8°
           </div>
         </div>
         <div class="col-sm">
           Tue
-          <img src="http://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
+          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
           <div class="forecast-temperature">
            <strong>2°</strong> 8°
           </div>
