Forecast elements moved into JS. HTML and CSS forecast classes and id added.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="day-weather">
         <div class="row">
           <div class="col-4 low-temp">
-           <span id="low-temp"></span>°C
+            <span id="low-temp"></span>°C
           </div>
           <div class="col-4 current-temp degrees" id="currentTemp">
             
@@ -79,45 +79,9 @@
       <hr />
 
       <!-- WEATHER NEXT 5 DAYS -->
-      <div class="row forecast">
-        <div class="col-sm">
-          Tue
-          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
-          <div class="forecast-temperature">
-           <strong>2°</strong> 8°
-          </div>
-        </div>
-        <div class="col-sm">
-          Tue
-          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
-          <div class="forecast-temperature">
-           <strong>2°</strong> 8°
-          </div>
-        </div>
-        <div class="col-sm">
-          Tue
-          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
-          <div class="forecast-temperature">
-           <strong>2°</strong> 8°
-          </div>
-        </div>
-        <div class="col-sm">
-          Tue
-          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
-          <div class="forecast-temperature">
-           <strong>2°</strong> 8°
-          </div>
-        </div>
-        <div class="col-sm">
-          Tue
-          <img src="https://openweathermap.org/img/wn/10d@2x.png" id="forecast-icon">
-          <div class="forecast-temperature">
-           <strong>2°</strong> 8°
-          </div>
-        </div>
-
-
+      <div class="row weather-forecast" id="forecast">
       
+      </div>
       </div>
     </div>
     <footer>
