CSS Colour palette and opacity updated. Farenheit units rounded.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <!-- SEARCH ENGINE -->
       <form class="search-engine">
-        <input type="text" placeholder="Search city" class="search-city" />
+        <input type="text" placeholder="Enter city..." class="search-city" />
         <input type="submit" value="Search" class="btn-weather" />
         <input type="submit" value="Current" class="btn-current" />
       </form>
